# stellar-identity-credentials

./: .clippy.toml  .eslintrc.json  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  jest.config.js  package-lock.json  package.json  tsconfig.json  tsup.config.ts  typedoc.json
.github/: PULL_REQUEST_TEMPLATE.md
.well-known/: did-stellar.toml
circuits/: age-verification.circom  composite_proof.circom  credential_ownership.circom  income-verification.circom  membership-verification.circom  package.json  range_proof.circom  selective_disclosure.circom  set_membership.circom
cli/: index.ts  tsconfig.json
docs/: SECURITY_AUDIT_PREP.md  UPDATE.md  api-gateway.md  api-reference.md  cli-guide.md  compliance-screening.md  cross-domain-did-resolution.md  deployment-guide.md  disaster-recovery-strategy.md  error-handling-guide.md  gas-benchmarks.md  integration-guide.md  quick-start-guide.md  security-audit-checklist.md  selective-disclosure.md  update.md
examples/: age-verification-bar.ts  business-verification.ts  cli-demo.ts  dao-governance.ts  did-lifecycle.ts  exchange-compliance.ts  kyc-flow.ts  loan-application.ts  privacy-preserving-age-check.ts  reputation-builder.ts  reputation-lending.ts  travel-rule-compliance.ts  university-diploma.ts
sandbox/: index.ts  start-sandbox.sh  test-scenario.template.ts
scripts/: check-rust-fn-length.py
src/: admin.rs  audit_trail.rs  bench.rs  compliance_filter.rs  contract_upgrade_governance.rs  coverage_tests.rs  credential_encryption.rs  credential_issuer.rs  credential_offer.rs  credential_schema.rs  (+27 more)
(+110 files in other folders)
