[package]
name = "stellar-identity-credentials-sdk"
version = "0.1.0"
edition = "2021"
description = "Stellar-based decentralized identity and verifiable credentials SDK"
authors = ["Stellar Identity Team"]
license = "Apache-2.0"

[dependencies]
soroban-sdk = "22.0.0"
soroban-token-sdk = "22.0.0"
stellar-strkey = "0.0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
ed25519-dalek = "2.0"
rand = "0.8"
hex = "0.4"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
url = "2.4"
# ZK-proof dependencies
ark-ff = "0.4"
ark-ec = "0.4"
ark-bls12-381 = "0.4"
ark-groth16 = "0.4"
ark-relations = "0.4"
ark-serialize = "0.4"
ark-crypto-primitives = "0.4"
ark-r1cs-std = "0.4"
blake2 = "0.10"
curve25519-dalek = "4.0"

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

